compiler/tests/en/errors/walrus_immutable.salam
// EXPECT: E013
func main:
    x := 10
    x = 20
    println x
end
